# pcd-image-model

./: .gitignore  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  external_requirements.txt  steps.txt
embedding_model/configs/: s3e_left.yaml  s3e_right.yaml
embedding_model/model/: anno_loader.py  cache_embeddings.py  test.py  train.py
embedding_model/model/sst/: lidar_encoder.py  sst_basic_block_v2.py  sst_encoder_config_v2.py  sst_input_layer_v2.py  sstv2_base.py
pcd_eval/configs/: kaist_left.yaml
pcd_eval/model/: anno_loader.py  cache_embeddings.py  loader.py  sst_encoder_config.py  train.py
pcd_eval/model/sst/: attention_pool.py  cosine_msa.py  lidar_encoder.py  objects.py  sst_basic_block_v2.py  sst_input_layer_v2.py  sst_ops.py  sstv2_base.py
