[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "embedding_model"
version = "0.1.0"
description = "A LidarCLIP-based model to create embedings for point cloud & image."
authors = ["Mark Griguletskii mark.griguletskii@skoltech.ru"]

# Base dependencies
[tool.poetry.dependencies]
python = "^3.9"
ftfy = "*"
regex = "*"
tqdm = "*"
ipdb = "*"
wandb = "*"
clip = {git = "https://github.com/openai/CLIP.git"}