[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "embedding_model"
version = "0.1.0"
description = "A LidarCLIP-based model to create embedings for point cloud & image."
authors = ["Mark Griguletskii mark.griguletskii@skoltech.ru"]

# Base dependencies
[tool.poetry.dependencies]
python = "^3.9"
ftfy = "*"
regex = "*"
tqdm = "*"
ipdb = "*"
wandb = "*"
pytorch-lightning = "*"
numpy = "1.26.4"
torch = "2.5.1"
torchvision = "0.20.1"
clip = {git = "https://github.com/openai/CLIP.git"}